--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -4,7 +4,7 @@
     align-items: center;
     border-radius: 0;
     overflow: hidden;
-    width: 200px;
+    width: 250px;
     margin: 5px;
     border: none;
     box-shadow: none;
@@ -37,11 +37,11 @@
 }
 
 .card-price-container {
-    display: none; /* Ocultamos si no se usa */
+    display: none;
 }
 
 .card-body a button {
-    display: none; /* Ocultamos botón para seguir look de catálogo estático */
+    display: none; 
 }
 .card-description {
     font-size: 0.75rem;
